@@ -646,6 +646,7 @@ JLIB_HTML_BEHAVIOR_YEAR_SELECT="- Use the « and » buttons to select year\n"
 JLIB_HTML_BUTTON_BASE_CLASS="Could not load button base class."
 JLIB_HTML_BUTTON_NO_LOAD="Could not load button %s (%s);"
 JLIB_HTML_BUTTON_NOT_DEFINED="Button not defined for type = %s"
+JLIB_HTML_CALENDAR="Calendar"
 JLIB_HTML_CHECKED_OUT="Checked out"
 JLIB_HTML_DISPLAY_NUM="Display #"
 JLIB_HTML_END="End"
@@ -677,7 +678,6 @@ JLIB_INSTALLER_ERROR_FOLDER_IN_USE="Another extension is already using directory
 JLIB_INSTALLER_ERROR_NO_LANGUAGE_TAG="The package did not specify a language tag. Are you trying to install an old language package?"
 JLIB_INSTALLER_ERROR_NO_CORE_LANGUAGE="No core pack exists for the language [%s]"
 JLIB_INSTALLER_ERROR_UNKNOWN_CLIENT_TYPE="Unknown Client Type [%s]"
-JLIB_INSTALLER_ERROR_XMLSETUP="No XML files were found in the install folder."
 JLIB_INSTALLER_INSTALL="Install"
 JLIB_INSTALLER_UPDATE="Update"
 JLIB_INSTALLER_UNINSTALL="Uninstall"
@@ -795,8 +795,29 @@ JLIB_INSTALLER_ERROR_TPL_UNINSTALL_TEMPLATE_ID_EMPTY="Template Uninstall: Templa
 JLIB_INSTALLER_ERROR_TPL_UNINSTALL_WARNCORETEMPLATE="Template Uninstall: Trying to uninstall a core template: %s"
 JLIB_INSTALLER_ERROR_DOWNLOAD_SERVER_CONNECT="Error connecting to the server: %s"
 JLIB_INSTALLER_ERROR_FAILED_READING_NETWORK_RESOURCES="Failed reading network resource: %s"
-JLIB_INSTALLER_ERROR_NOTFINDXMLSETUPFILE="Cannot find XML setup file"
-JLIB_INSTALLER_ERROR_NOTFINDJOOMLAXMLSETUPFILE="Cannot find Joomla XML setup file"
+
+JLIB_INSTALLER_ABORT_NOINSTALLPATH="Install path does not exist"
+JLIB_INSTALLER_ABORT_METHODNOTSUPPORTED="Method not supported for this extension type"
+JLIB_INSTALLER_ABORT_EXTENSIONNOTVALID="Extension is not valid"
+JLIB_INSTALLER_ABORT_NOUPDATEPATH="Update path does not exist"
+JLIB_INSTALLER_ABORT_DETECTMANIFEST="Unable to detect manifest file"
+JLIB_INSTALLER_ABORT_LOAD_DETAILS="Failed to load extension details"
+JLIB_INSTALLER_ABORT_REFRESH_MANIFEST_CACHE="Refresh Manifest Cache failed: Extension is not currently installed."
+JLIB_INSTALLER_ABORT_ALREADYINSTALLED="Extension is already installed"
+JLIB_INSTALLER_ABORT_METHODNOTSUPPORTED_TYPE="Method not supported for this extension type: %s"
+JLIB_INSTALLER_ABORT_REFRESH_MANIFEST_CACHE_VALID="Refresh Manifest Cache failed: Extension is not valid."
+JLIB_INSTALLER_ERROR_SQL_ERROR="JInstaller::Install: Error SQL %s"
+JLIB_INSTALLER_ERROR_SQL_FILENOTFOUND="JInstaller::Install: SQL File not found %s"
+JLIB_INSTALLER_ERROR_SQL_READBUFFER="JInstaller::Install: SQL File Buffer Read Error"
+JLIB_INSTALLER_ERROR_CREATE_DIRECTORY="JInstaller::Install: Failed to create directory: %s"
+JLIB_INSTALLER_ERROR_NO_FILE="JInstaller::Install: File does not exist %s"
+JLIB_INSTALLER_ERROR_FILE_EXISTS="JInstaller::Install: File alreadys exists %s"
+JLIB_INSTALLER_ERROR_FAIL_COPY_FOLDER="JInstaller::Install: Failed to copy folder %1$s to %2$s"
+JLIB_INSTALLER_ERROR_FAIL_COPY_FILE="JInstaller::Install: Failed to copy file %1$s to %2$s"
+JLIB_INSTALLER_ERROR_NOTFINDXMLSETUPFILE="JInstaller::Install: Cannot find XML setup file"
+JLIB_INSTALLER_ERROR_NOTFINDJOOMLAXMLSETUPFILE="JInstaller::Install: Cannot find Joomla XML setup file"
+JLIB_INSTALLER_ERROR_LOAD_XML="JInstaller::Install: Failed to load XML File: %s"
+
 
 JOPTION_ACCESS_SHOW_ALL_ACCESS="Show All Access"
 JOPTION_ACCESS_SHOW_ALL_GROUPS="Show All Groups"
