@@ -48,7 +48,7 @@ class JLibraryManifest extends JObject
 		$xml =JFactory::getXML($xmlfile);
 		if( ! $xml)
 		{
-			$this->_errors[] = 'Failed to load XML File: ' . $xmlfile;
+			$this->_errors[] = JText::sprintf('JLIB_INSTALLER_ERROR_LOAD_XML', $xmlfile);
 			return false;
 		}
 		else
